After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757915 - Crashes on dragging a java application between workspaces
Crashes on dragging a java application between workspaces
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-core
unspecified
Other Linux
: Normal normal
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-11-10 21:27 UTC by Samuel Thibault
Modified: 2015-11-14 15:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed fix (496 bytes, patch)
2015-11-10 21:27 UTC, Samuel Thibault
committed Details | Review

Description Samuel Thibault 2015-11-10 21:27:14 UTC
Created attachment 315215 [details] [review]
proposed fix

Hello,

Complete user bug report is on http://bugs.debian.org/804720 but basically the interesting thing is:

Nov 10 15:48:21 hopa kernel: gnome-shell[2266]: segfault at 0 ip 00007f30c1d353dc sp 00007ffdd5abc240 error 4 in libatspi.so.0.0.1[7f30c1d16000+31000]

(gdb) l * 0x1f3dc
0x1f3dc is in atspi_state_set_set_by_name (atspi-stateset.c:107).

which is a dereference of the "value" pointer just after having tested whether it might be NULL. In the proposed fix I move that dereference to the else branch of that test.
Comment 1 Mike Gorse 2015-11-14 15:47:51 UTC
Comment on attachment 315215 [details] [review]
proposed fix

Looks good. Thanks for the patch.
master: b3164d
gnome-3-18: c28f33