Don't crash when trying to set an invalid state

https://bugzilla.gnome.org/show_bug.cgi?id=757915